fixing access on mobile version

--- a/app/assets/stylesheets/ViSH_style_guide/general/extras/_buttons.css.sass
+++ b/app/assets/stylesheets/ViSH_style_guide/general/extras/_buttons.css.sass
@@ -109,6 +109,8 @@
     stroke: #fff
     stroke-width: 2
     stroke-dasharray: 422, 0
+  @media (max-width: 655px)
+    display: none
 
 .btn-anim:hover, .btn-anim:focus, .btn-anim:active
   background: rgba(black, 0.4)
