--- a/app/assets/stylesheets/ViSH_style_guide/general/layouts/_header.css.sass
+++ b/app/assets/stylesheets/ViSH_style_guide/general/layouts/_header.css.sass
@@ -87,7 +87,7 @@ nav.navbar-fixed-top
                   color: white
               .notification
                 color: $brand-primary
-                
+
           .dropdown-menu:before, .dropdown-menu:after
             display: none
           form
@@ -247,7 +247,10 @@ nav.navbar-fixed-top
         float: none
         background-color: $gray-darker
         padding: 10px
-
+        li.btn-access
+          margin: 0 10px
+          a
+            color: white
         li
           float: none
           a
